# ErrorAffirmations

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  codecov.yml  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yaml  linting.yaml  tag_and_release.yaml  tag_and_release.yml  version_checks.yaml
docs/source/: api.rst  conf.py  default.rst  examples.rst  index.rst
erroraffirmations/: __init__.py  _version.py  affirmations.py
erroraffirmations/data/: affirmations.txt
examples/: basic_usage.py  disabling_affirmations.py  editing_affirmations.py  empty_affirmations.py  loading_affirmations.py  my_affirmations.txt
tests/: test_examples.py  test_functionality.py  test_interface.py
tests/test_data/: test_affirmations.txt
